--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,4 +82,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.android.support:appcompat-v7:25.0.1'
+
+}
